Alter the mail address of the repository.

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     },
     "authors": [
         {
-            "name": "Mong",
-            "email": "sisp8111@gmail.com"
+            "name": "Mong Che",
+            "email": "melanth.web@gmail.com"
         }
     ],
     "autoload": {
